# echelon

./: .envrc  .gitignore  README.md  common.nix  flake.nix  package.json  result  shell.nix
.github/workflows/: main.yml
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  client_handler.rs  commands.rs  events.rs  keyring_client.rs  lib.rs  main.rs  rooms.rs  secret.rs  spaces.rs  store.rs  stronghold_backend.rs  sync_manager.rs  user.rs
src-tauri/src/account/: account_reset_types.rs
src-tauri/src/client_handler/: account_reset.rs  factory.rs  oauth_auth.rs  password_auth.rs  registration.rs
src-tauri/src/commands/: account.rs  auth.rs  dm.rs  rooms.rs  spaces.rs
src-tauri/src/events/: client_events.rs
src-tauri/src/rooms/: room_info.rs  room_types.rs
src-tauri/src/spaces/: raw_space.rs  space_info.rs
src/lib/: utils.ts
src/lib/styles/: chat.css  login.css
src/routes/: +layout.svelte  +page.svelte
src/routes/chat/: +page.svelte
static/: THIRD_PARTY_LICENSES.md
