[package]
name = "echelon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echelon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
matrix-sdk = { version = "0.16.0", features = ["anyhow", "e2e-encryption", "markdown", "bundled-sqlite", "local-server"] }
tokio = { version = "1.49.0", features = ["sync"] }
openssl-sys = { version = "0.9.111", features = ["vendored"] }
ruma = "0.14.1"
anyhow = "1.0.101"
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rand = "0.10.0"
iota_stronghold = "2.1.0"
futures-util = "0.3.31"
futures-core = "0.3.31"
blake3 = "1.8.3"
tauri-plugin-store = "2"
tracing-android = "0.2"

# base keyring, which we then add more features onto later
keyring-core = "0.7.4"

# Desktop-specific secure storage, apple-native also deals with ios
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "4.0.0-beta.3" }

# Android-specific secure storage.
[target.'cfg(target_os = "android")'.dependencies]
keyring = { version = "4.0.0-beta.3" }
android-native-keyring-store = { version = "0.6.0", features = ["tracing-subscriber"] }

[profile.dev.package.scrypt]
opt-level = 3

[patch.crates-io]
android-native-keyring-store = { git = "https://github.com/open-source-cooperative/android-native-keyring-store.git", branch = "next" }

